# RPC_NTP

./: CMakeLists.txt  README.md  build_linux.sh  build_win.bat
include/asio/: async_result.hpp  basic_datagram_socket.hpp  basic_deadline_timer.hpp  basic_io_object.hpp  basic_raw_socket.hpp  basic_seq_packet_socket.hpp  basic_serial_port.hpp  basic_signal_set.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  basic_socket_iostream.hpp  basic_socket_streambuf.hpp  basic_stream_socket.hpp  basic_streambuf.hpp  basic_streambuf_fwd.hpp  basic_waitable_timer.hpp  buffer.hpp  buffered_read_stream.hpp  buffered_read_stream_fwd.hpp  buffered_stream.hpp  buffered_stream_fwd.hpp  buffered_write_stream.hpp  buffered_write_stream_fwd.hpp  buffers_iterator.hpp  completion_condition.hpp  connect.hpp  coroutine.hpp  datagram_socket_service.hpp  deadline_timer.hpp  deadline_timer_service.hpp  error.hpp  error_code.hpp  handler_alloc_hook.hpp  handler_continuation_hook.hpp  handler_invoke_hook.hpp  handler_type.hpp  high_resolution_timer.hpp  io_service.hpp  is_read_buffered.hpp  is_write_buffered.hpp  (+27 more)
include/asio/detail/: addressof.hpp  array.hpp  atomic_count.hpp  base_from_completion_cond.hpp  bind_handler.hpp  buffer_resize_guard.hpp  buffer_sequence_adapter.hpp  buffered_stream_storage.hpp  call_stack.hpp  chrono_time_traits.hpp  completion_handler.hpp  consuming_buffers.hpp  cstdint.hpp  deadline_timer_service.hpp  dependent_type.hpp  descriptor_ops.hpp  descriptor_read_op.hpp  descriptor_write_op.hpp  dev_poll_reactor.hpp  epoll_reactor.hpp  event.hpp  eventfd_select_interrupter.hpp  fd_set_adapter.hpp  fenced_block.hpp  function.hpp  gcc_arm_fenced_block.hpp  gcc_hppa_fenced_block.hpp  gcc_sync_fenced_block.hpp  gcc_x86_fenced_block.hpp  handler_alloc_helpers.hpp  handler_cont_helpers.hpp  handler_invoke_helpers.hpp  handler_tracking.hpp  handler_type_requirements.hpp  hash_map.hpp  io_control.hpp  keyword_tss_ptr.hpp  kqueue_reactor.hpp  local_free_on_block_exit.hpp  macos_fenced_block.hpp  (+122 more)
include/asio/detail/impl/: buffer_sequence_adapter.ipp  descriptor_ops.ipp  dev_poll_reactor.hpp  dev_poll_reactor.ipp  epoll_reactor.hpp  epoll_reactor.ipp  eventfd_select_interrupter.ipp  handler_tracking.ipp  kqueue_reactor.hpp  kqueue_reactor.ipp  pipe_select_interrupter.ipp  posix_event.ipp  posix_mutex.ipp  posix_thread.ipp  posix_tss_ptr.ipp  reactive_descriptor_service.ipp  reactive_serial_port_service.ipp  reactive_socket_service_base.ipp  resolver_service_base.ipp  select_reactor.hpp  select_reactor.ipp  service_registry.hpp  service_registry.ipp  signal_set_service.ipp  socket_ops.ipp  socket_select_interrupter.ipp  strand_service.hpp  strand_service.ipp  task_io_service.hpp  task_io_service.ipp  throw_error.ipp  timer_queue_ptime.ipp  timer_queue_set.ipp  win_event.ipp  win_iocp_handle_service.ipp  win_iocp_io_service.hpp  win_iocp_io_service.ipp  win_iocp_serial_port_service.ipp  win_iocp_socket_service_base.ipp  win_mutex.ipp  (+8 more)
include/asio/generic/: basic_endpoint.hpp  datagram_protocol.hpp  raw_protocol.hpp  seq_packet_protocol.hpp  stream_protocol.hpp
include/asio/generic/detail/: endpoint.hpp
include/asio/impl/: buffered_read_stream.hpp  buffered_write_stream.hpp  connect.hpp  error.ipp  error_code.ipp  handler_alloc_hook.ipp  io_service.hpp  io_service.ipp  read.hpp  read_at.hpp  read_until.hpp  serial_port_base.hpp  serial_port_base.ipp  spawn.hpp  use_future.hpp  write.hpp  write_at.hpp
include/asio/ip/: address.hpp  address_v4.hpp  address_v6.hpp  basic_endpoint.hpp  basic_resolver.hpp  basic_resolver_entry.hpp  basic_resolver_iterator.hpp  basic_resolver_query.hpp  host_name.hpp  icmp.hpp  multicast.hpp  resolver_query_base.hpp  resolver_service.hpp  tcp.hpp  udp.hpp  unicast.hpp  v6_only.hpp
include/asio/local/: basic_endpoint.hpp  connect_pair.hpp  datagram_protocol.hpp  stream_protocol.hpp
include/asio/posix/: basic_descriptor.hpp  basic_stream_descriptor.hpp  descriptor_base.hpp  stream_descriptor.hpp  stream_descriptor_service.hpp
include/asio/ssl/: basic_context.hpp  context.hpp  context_base.hpp  context_service.hpp  error.hpp  rfc2818_verification.hpp  stream.hpp  stream_base.hpp  stream_service.hpp  verify_context.hpp  verify_mode.hpp
include/asio/windows/: basic_handle.hpp  basic_object_handle.hpp  basic_random_access_handle.hpp  basic_stream_handle.hpp  object_handle.hpp  object_handle_service.hpp  overlapped_ptr.hpp  random_access_handle.hpp  random_access_handle_service.hpp  stream_handle.hpp  stream_handle_service.hpp
tinyntp/: CMakeLists.txt
tinyntp/ntpclient/: CMakeLists.txt  DigitalClock.cpp  DigitalClock.h  main.cc
tinyntp/ntpserver/: CMakeLists.txt  main.cc
tinyrpc/: CMakeLists.txt
tinyrpc/client/: CMakeLists.txt  client.cc  client.h  client.inl
tinyrpc/core/: CMakeLists.txt  config.cpp  config.h  dispatcher.cc  dispatcher.h  dispatcher.inl  response.cc  response.h  version.h
tinyrpc/core/fmt/: format.cc  format.h  posix.cc  posix.h
tinyrpc/detail/: all.h  any.h  async_writer.h  bool.h  call.h  constant.h  dev_utils.h  func_tools.h  func_traits.h  if.h  invoke.h  is_specialization_of.h  log.h  not.h  object.h  pimpl.h  server_session.cc  server_session.h  thread_group.h
tinyrpc/server/: CMakeLists.txt  server.cc  server.h
(+38 files in other folders)
