CMAKE_MINIMUM_REQUIRED(VERSION 3.4)

IF (WIN32)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall  -std=c++14")
	ADD_DEFINITIONS(-D_WINSOCK_DEPRECATED_NO_WARNINGS)
	ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
	ADD_DEFINITIONS(-DWIN32_LEAN_AND_MEAN)
	ADD_DEFINITIONS(-DVC_EXTRALEAN)
	ADD_DEFINITIONS(-D_GNU_SOURCE)
ELSEIF (LINUX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wno-unused-local-typedef -std=c++14")
ENDIF()
SET(CMAKE_BUILD_TYPE Release)

INCLUDE_DIRECTORIES(../include ../tinyrpc)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)


ADD_SUBDIRECTORY(ntpserver)
ADD_SUBDIRECTORY(ntpclient)