cmake_minimum_required(VERSION 3.4)

SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

# 指定生成目标
AUX_SOURCE_DIRECTORY(. DIR_SERVER)
AUX_SOURCE_DIRECTORY(./../detail/. DIR_DETAIL)
file(GLOB_RECURSE FILE_SOURCE
        include/*.cc)
SET(SOURCE ${DIR_SERVER}  ${DIR_DETAIL} ${FILE_SOURCE})

ADD_LIBRARY(tinyrpc_server ${SOURCE} )
TARGET_LINK_LIBRARIES(tinyrpc_server tinyrpc_core)